force-app/main/default/objects/Lift_Additional_Kit__c/Lift_Additional_Kit__c.object-meta.xml
<CustomObject>
    <label>Lift Additional Kit</label>
    <nameField>
        <displayFormat>LAK-{00000000}</displayFormat>
        <label>Lift Additional Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lift Additional Kits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>