force-app/main/default/objects/Lift_Additional_Kit__c/fields/Configuration_ID__c.field-meta.xml
<CustomField>
    <fullName>Configuration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Configuration ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>