force-app/main/default/objects/Lift_Additional_Kit__c/fields/Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Kit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Kit ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>