force-app/main/default/objects/Lift_Additional_Kit__c/fields/Kit_Num__c.field-meta.xml
<CustomField>
    <fullName>Kit_Num__c</fullName>
    <label>Kit Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>