force-app/main/default/objects/Lift_Additional_Kit__c/fields/Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>Kit_Type__c</fullName>
    <label>Kit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Kit_Type</valueSetName>
    </valueSet>
</CustomField>